--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 # Roberto Jair López Morales  
 ## 19100207
 
-**Programcion Web**  
-*7mo Semestre*    
+*7mo Semestre*
 
+**Programcion Web**  
+Impartida: Ing. Gerardo Pineda Zapata  
 
